DMP-4724 Update Case Document Generation Logic
Merged master